syntax = "proto3";
package lrmrpb;

import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "lrdd/row.proto";

service Worker {
    rpc CreateTask (CreateTaskRequest) returns (google.protobuf.Empty);
    rpc PushData (stream PushDataRequest) returns (google.protobuf.Empty);
    rpc PollData (stream PollDataRequest) returns (stream PollDataResponse);
}

message CreateTaskRequest {
    Stage stage = 1;
    string partitionKey = 2;
    Input input = 3;
    Output output = 4;
    map<string, bytes> broadcasts = 5;
}

message Stage {
    string jobID = 1;
    string name = 2;
    string runnerName = 3;
}

message Input {
    enum Type {
        PUSH = 0;
        POLL = 1;
    }
    Type type = 1;
    string stageName = 2;

    // partitionKeyToHost contains an ordered mapping of partition key to output hostname.
    map<string, string> partitionToHost = 3;
}

message Output {
    enum Type {
        PUSH = 0;
        POLL = 1;
    }
    Type type = 1;
    string stageName = 2;

    enum PartitionerType {
        SHUFFLE = 0;

        // HashPartitioner will determine output shard of the partition
        // by calculating `hash(row.Key) modulo shardCount.`
        HASH_KEY = 1;

        // FiniteKeyPartitioner assigns partition keys to each shard and
        // will send an output partition to its designated shard.
        FINITE_KEY = 2;
    }
    PartitionerType partitioner = 3;

    // partitionKeyToHost contains an ordered mapping of partition key to output hostname.
    map<string, string> partitionToHost = 4;
}

message HostMapping {
    string host = 1;
    string taskID = 2;
}

message CreateTaskResponse {
    string taskID = 1;
}

// PushDataRequest is a request to push data for a worker to process.
// metadata with key "header" and value of DataHeader is required.
message PushDataRequest {
    repeated lrdd.Row data = 1;
}

// PollDataRequest is a request to poll data for a worker to process.
// metadata with key "header" and value of DataHeader is required.
message PollDataRequest {
    // N is maximum number of the data returned.
    int64 n = 1;
}

message PollDataResponse {
    repeated lrdd.Row data = 1;
}

message DataHeader {
    string taskID = 1;
    string fromHost = 2;
    string fromNodeID = 3;
}
